k8s/nautilus/dcgm-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dcgm-exporter
  namespace: cse239fall2025
  labels:
    app: dcgm-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dcgm-exporter
  template:
    metadata:
      labels:
        app: dcgm-exporter
    spec:
      nodeSelector:
        nvidia.com/gpu.present: "true"   # MUST run on GPU nodes

      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"

      containers:
      - name: dcgm-exporter
        image: nvidia/dcgm-exporter:3.3.5-3.4.0-ubuntu22.04
        ports:
        - containerPort: 9400
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
