k8s/nautilus/embedding.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: embeddings-counselgpt-mthiruma
  namespace: cse239fall2025
  labels:
    app: embeddings-counselgpt-mthiruma

spec:
  replicas: 1
  selector:
    matchLabels:
      app: embeddings-counselgpt-mthiruma

  template:
    metadata:
      labels:
        app: embeddings-counselgpt-mthiruma

    spec:

      # -----------------------------
      # Init Container (Download model)
      # -----------------------------
      containers:
      - name: embeddings
        image: mathesh0208/semanticembedding:v2
        ports:
        - containerPort: 8000

        volumeMounts:
        - name: embedding-storage
          mountPath: /models

        resources:      # <-- REQUIRED IN NAUTILUS
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "2Gi"

      # -----------------------------
      # Volume
      # -----------------------------
      volumes:
      - name: embedding-storage
        persistentVolumeClaim:
          claimName: embedding-models-pvc-mthiruma
