k8s/nautilus/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counselgpt-redis-mthiruma
  namespace: cse239fall2025
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9121"
spec:
  selector:
    app: redis-mthiruma
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  - name: metrics
    port: 9121
    targetPort: 9121
